--- a/static/index_enhanced.html
+++ b/static/index_enhanced.html
@@ -198,7 +198,15 @@
 
         #resultsTable {
             overflow-x: auto;
+            overflow-y: visible;
             width: 100%;
+            -webkit-overflow-scrolling: touch;
+            /* Smooth scrolling on touch devices */
+            scroll-behavior: smooth;
+        }
+
+        #resultsTable table {
+            min-width: 100%;
         }
 
         table {
